# Coin-Flip-Betting-Simulation

./: CMakeLists.txt  CasesInfo.h  GamblerInfoClass.h  MonteCarloResultsPrint.h  MonteCarloWalks.h  README.md
Header Files/: BettingStrategies.h  FileHandler.h  MonteCarloResultsPrint.h  MonteCarloWalks.h  Plotting.h  ProgramMode.h  RandomGen.h  StructRelated.h
Simulator/: BettingStrategies.h  CMakeLists.txt  CasesInfo.h  Enum.h  MonteCarloWalks.h  MultiThreading.h  Plotting.h  RandomGen.h  SimulatorEngine.h  StructRelated.h  main.cpp
Simulator/Header Files/: BettingStrategies.h  MonteCarloResultsPrint.h  MonteCarloWalks.h  Plotting.h  RandomGen.h  SimulatorEngine.h  StructRelated.h
Simulator/Source/: main.cpp
src/: main.cpp
